--- a/.github/workflows/qlty.yml
+++ b/.github/workflows/qlty.yml
@@ -5,14 +5,19 @@ on:
     branches:
       - main
 
+permissions: # Fix GitHub warning for write-all
+  contents: read
+  pull-requests: write
+
 jobs:
   qlty:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '18'
 
